--- a/style/style.css
+++ b/style/style.css
@@ -10,13 +10,36 @@
  }
  header {
 	height: 35px;
-    border: 1px solid #000000;
-    display: flex;
-    flex-direction: row-reverse;
-    align-content: center;
-    align-items: center;
-		background-color: black;
+	border: 1px solid #000000;
+	display: flex;
+	flex-direction: row;
+	align-content: center;
+	align-items: center;
+	background-color: black;
+	justify-content: space-between;
+}
+ .hor_menu {
+	display: flex;
+	list-style: none;
+	color: white;
+	flex-direction: row;
+	flex-wrap: wrap;
  }
+ .hor_menu li {
+	padding: 10px;
+	font-size: 20px;
+ }
+ .hor_menu_activ {
+	text-decoration: underline;
+	color: rgb(0, 0, 0);
+	background-color: white;
+ }
+ .hor_menu a {
+	text-decoration: none;
+	color: white;
+	font-size: 15px;
+}
+
  .cart-button {
 	margin: 5px 20px;
 	height: 20px;
