--- a/style/style.css
+++ b/style/style.css
@@ -1,76 +1,73 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+body{
+	font-family: 'SF Pro Display', sans-serif;
 }
- body {
-	max-width: 1440px;
-	width: 100%;
-	margin: 0 auto;
- }
- header {
-	position: relative;
-	height: 60px;
-	border: 1px solid #000000;
+header{
 	display: flex;
-	flex-direction: row;
-	align-content: center;
-	align-items: center;
-	background-color: black;
+	background-color: #2f2a2d;
+	justify-content: space-between;
+	color: #fafafa;
+	padding: 30px 80px;
+}
+button:focus{
+	outline: none;
+}
+.logo{
+
+	text-transform: uppercase;
+	font-weight: bold;
+}
+.btn-cart{
+	background-color: #fafafa;
+	padding: 10px 20px;
+	border: 1px solid transparent;
+	color: #2f2a2d;
+	border-radius: 5px;
+	transition: all ease-in-out .4s;
+	cursor: pointer;
+}
+.btn-cart:hover{
+	background-color: transparent;
+	border-color: #fafafa;
+	color: #fafafa;
+}
+.btn-cart, .logo{
+	align-self: center;
+}
+/*.products {*/
+/*display: flex;*/
+/*justify-content: space-between;*/
+/*flex-wrap: wrap;*/
+/*padding: 40px 80px;*/
+/*}*/
+.products{
+	column-gap: 30px;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, 200px);
+	grid-template-rows: 1fr;
+	padding: 40px 80px;
 	justify-content: space-between;
 }
- .hor_menu {
-	display: flex;
-	list-style: none;
-	color: white;
-	flex-direction: row;
-	flex-wrap: wrap;
- }
- .hor_menu li {
-	padding: 10px;
-	font-size: 20px;
- }
- .hor_menu_activ {
-	text-decoration: underline;
-	color: rgb(0, 0, 0);
-	background-color: white;
- }
- .hor_menu a {
-	text-decoration: none;
-	color: white;
-	font-size: 15px;
+p {
+	margin: 0 0 5px 0;
 }
-
- .cart-button {
-	margin: 5px 20px;
-	height: 20px;
-	width: 80px;
-	border-radius: 30px;
- }
- .goods-list {
-	display: flex;
-	flex-wrap: wrap;
-	align-content: center;
-	align-items: center;
-	margin: 15px 25px;
- }
- .goods-item {
-	min-width: 250px;
-	border: 1px solid #000000;
-	flex-grow: 1;
+.product-item{
 	display: flex;
 	flex-direction: column;
-	align-content: center;
-	justify-content: space-between;
-	align-items: center;
- }
- .goods-item img {
-	height: 300px;
+	width: 200px;
+	border-radius: 5px;
+	overflow: hidden;
+	margin: 20px 0;
 }
-.cart-button_add {
-	margin: 20px 14px 14px auto;
-	padding: 5px 25px;
-	border-radius: 15px;
+img {
+	max-width: 100%;
+	height: auto
+}
+.desc {
+	border: 1px solid #c0c0c040;
+	padding: 15px
+}
+.cart{
+	position: relative;
 }
 .cart-block{
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
@@ -85,9 +82,8 @@
 	width: 300px;
 }
 
-.invisible {
+.invisible{
 	display: none;
-	
 }
 .cart-block:before{
 	content: '';
@@ -100,6 +96,7 @@
 	border-right: 10px solid transparent;
 	border-bottom: 10px solid white;
 }
+
 .buy-btn, .del-btn{
 	margin-top: 5px;
 	background-color: #2f2a2d;
